gcc/testsuite/rust/rustc/ui/env-macro/env-not-defined-default.rs
fn main() {
    env!("CARGO__HOPEFULLY_NOT_DEFINED__");
// { dg-error "" "" { target *-*-* } .-1 }
}

